<resources>
    <string name="app_name">PATANJALI</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="introduction">INTRODUCTION</string>
    <string name="chap1">SAMAADHI PAADA</string>
    <string name="chap2">SAADHANA PAADA</string>
    <string name="chap3">VIBHUTI PAADA</string>
    <string name="chap4">KAIVALYA PAADA</string>
    <string name="yogasutra">YOGASUTRA</string>
    <string name="side_img">side_bar_img</string>
    <string name="play"> > </string>
    <string name="pause"> II </string>
    <string name="forward"> >> </string>
    <string name="rewind"> &lt;&lt; </string>
    <string name="stop"> X </string>

    <string name="intro_para">The Yoga Sūtras of Patañjali are 196 Indian sutras (aphorisms). The Yoga Sutras were compiled around 400 CE by Sage Patanjali, taking materials about yoga from older traditions. Together with his commentary they form thePātañjalayogaśāstra.</string>
    <string name="shlokas">shlokas</string>
    <string name="title_activity_introduction">introduction</string>
    <string name="title_activity_chapter1">Chapter1</string>
    <string name="title_activity_chapter2">Chapter2</string>
</resources>
