<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_con"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="yogasutra.android.com.patanjali.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yogasutra"
        android:id="@+id/head_intro"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:foregroundGravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/toolbar"/>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/side_img"
        android:src="@drawable/yogi"
        android:id="@+id/img_intro"
        android:layout_below="@+id/head_intro"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <Button
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_intro"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/img_intro"
        android:layout_alignEnd="@+id/img_intro"
        android:id="@+id/bt_intro"
        android:text="@string/introduction" />

    <Button
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:id="@+id/bt_chap1"
        android:layout_below="@+id/bt_intro"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/chap1"
        android:layout_alignRight="@+id/bt_intro"
        android:layout_alignEnd="@+id/bt_intro" />

    <Button
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:id="@+id/bt_chap2"
        android:layout_below="@+id/bt_chap1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/chap2"
        android:layout_alignRight="@+id/bt_chap1"
        android:layout_alignEnd="@+id/bt_chap1" />

    <Button
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:id="@+id/bt_chap3"
        android:layout_below="@+id/bt_chap2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/chap3"
        android:layout_alignRight="@+id/bt_chap2"
        android:layout_alignEnd="@+id/bt_chap2" />

    <Button
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:id="@+id/bt_chap4"
        android:layout_below="@+id/bt_chap3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/chap4"
        android:layout_alignRight="@+id/bt_chap3"
        android:layout_alignEnd="@+id/bt_chap3" />

</RelativeLayout>