<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/intro_con"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="yogasutra.android.com.patanjali.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yogasutra"
        android:id="@+id/head_intro"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:foregroundGravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/intro_para"
        android:text="@string/intro_para"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="17dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/side_img"
        android:src="@drawable/yogi"
        android:id="@+id/img_intro"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:layout_below="@id/head_intro" />

    <MediaController
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@+id/img_intro"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <Button
            android:layout_width="59dp"
            android:layout_height="33dp"
            android:text="@string/play"
            android:id="@+id/play"
            android:gravity="left|start"
            android:textAlignment="center"
            android:layout_gravity="left|start" />


        <Button
            android:layout_width="59dp"
            android:layout_height="33dp"
            android:text="@string/pause"
            android:id="@+id/pause"
            android:gravity="end"
            android:textAlignment="center"
            android:layout_gravity="right|end" />

        <android.support.v7.widget.AppCompatSeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seek"
            android:nestedScrollingEnabled="true"
            android:layout_gravity="bottom" />

    </MediaController>

    <Button
        android:layout_height="33dp"
        android:text="@string/stop"
        android:id="@+id/stop"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_below="@+id/img_intro"
        android:layout_centerHorizontal="true"
        android:layout_width="59dp" />

    <Button
        android:layout_width="59dp"
        android:text="@string/rewind"
        android:id="@+id/rewind"
        android:gravity="end"
        android:textAlignment="center"
        android:layout_gravity="right|end"
        android:layout_height="33dp"
        android:layout_below="@+id/img_intro"
        android:layout_alignRight="@+id/head_intro"
        android:layout_alignEnd="@+id/head_intro"
        android:layout_marginRight="11dp"
        android:layout_marginEnd="11dp" />

    <Button
        android:layout_width="59dp"
        android:layout_height="33dp"
        android:text="@string/forward"
        android:id="@+id/forward"
        android:gravity="end"
        android:textAlignment="center"
        android:layout_gravity="right|end"
        android:layout_below="@+id/img_intro"
        android:layout_alignLeft="@+id/head_intro"
        android:layout_alignStart="@+id/head_intro"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp" />

</RelativeLayout>
