<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/intro_con"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="yogasutra.android.com.patanjali.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yogasutra"
        android:id="@+id/head_intro"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:foregroundGravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/side_img"
        android:src="@drawable/yogi"
        android:layout_below="@id/head_intro"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:id="@+id/img_intro" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/intro_para"
        android:text="@string/intro_para"
        android:layout_below="@id/img_intro"
        android:layout_marginTop="20dp"/>
    <MediaController
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/intro_para"
        android:layout_marginTop="20dp">
    </MediaController>

</RelativeLayout>
